--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-    command = "yarn build"
-    publish = "build/"
+    command = "npm run build"
+    publish = "/build"
     base = "/"
 
 [[redirects]]
