--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "2.1.5"
   },
   "scripts": {
